<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="title_home">Home</string>
    <string name="upcoming">Upcoming</string>
    <string name="finished">Finished</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="upcoming_events">Upcoming Events</string>
    <string name="finished_events">Finished Events</string>
    <string name="online">Online</string>
    <string name="registrants_quota">%1$d / %2$d</string>
    <string name="remaining_quota">%1$d orang lagi</string>
    <string name="quota_full">Penuh</string>
    <string name="contentDescription">TODO</string>
    <string name="registrasi">Registrasi</string>
    <string name="cari_event">Cari Event</string>
    <string name="event_image_cover">Event image cover</string>
    <string name="favorite_button">favorite button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_kosong">Favorite kosong!\nTambahkan event favoritmu terlebih dahulu</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="enable_notifications">Enable Notifications</string>
</resources>