<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.artonov.dicodingevent.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.artonov.dicodingevent.ui.upcoming.UpcomingFragment"
        android:label="@string/upcoming"
        tools:layout="@layout/fragment_upcoming" >
        <action
            android:id="@+id/action_navigation_upcoming_to_upcomingDetailFragment"
            app:destination="@id/upcomingDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.artonov.dicodingevent.ui.finished.FinishedFragment"
        android:label="@string/finished"
        tools:layout="@layout/fragment_finished" />
    <fragment
        android:id="@+id/upcomingDetailFragment"
        android:name="com.artonov.dicodingevent.ui.upcoming.UpcomingDetailFragment"
        android:label="UpcomingDetailFragment" >
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>
</navigation>