<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Dark Mode Section -->
    <TextView
        android:id="@+id/tvTitleDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvDescriptionDarkMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switchDarkMode"
        tools:text="Dark Mode" />

    <TextView
        android:id="@+id/tvDescriptionDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_dark_mode"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:textColorSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/switchDarkMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleDarkMode"
        tools:text="Enable dark mode" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Daily Reminder Section -->
    <TextView
        android:id="@+id/tvTitleDailyReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_reminder"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvDescriptionDailyReminder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switchDailyReminder"
        tools:text="Daily Reminder" />

    <TextView
        android:id="@+id/tvDescriptionDailyReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_notifications"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:textColorSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/switchDailyReminder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleDailyReminder"
        tools:text="Enable notifications" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchDailyReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchDarkMode" />

</androidx.constraintlayout.widget.ConstraintLayout>
